Working as far as I can tell

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.9.6-0",
   "description": "gnats binaries for everyone!",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Jacob Gardner <jacob.v.gardner@gmail.com>",
   "license": "ISC"
 }
