--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gnats-static",
-  "version": "0.9.6-0",
-  "description": "gnats binaries for everyone!",
+  "version": "0.9.6-1",
+  "description": "Node module packaged with the NATS server, gnats, binaries",
   "main": "index.js",
   "author": "Jacob Gardner <jacob.v.gardner@gmail.com>",
   "license": "ISC"
